lab1/Test/L1-A-7-74.output
Error Type A at Line 16
Error Type A at Line 20
Error Type A at Line 28
Error Type A at Line 29
Error Type A at Line 36
