lab1/Test/L1-A-7-74.cmm
int M1 ( ) {
  int wejMERA ;
  int gCK_iMG22vB7Uws8V ;
}
struct ca {
  float vVvOgofJN , sV2DM0yYqcDn = fRJ || N + oJ1fQ4 
    * - yfMVElAnAO ( YvXXCPjI2Hw6Wi = Niy_suQ && P7KyuEtT35urNp1D 
    == Lxg8RX * oXlrJQInp7GJ4Dmkd [ Aiwpm || qykSf11kbIb3sJwY 
    <= iZaOtsqbRH9QShxrUv9o + dntx7Awch3HAHq05MDjF * ( 
    hvqCigXwPSKsnnzb = b7NBss08qC < ILyh8G - - ! ( ghjU7Ms3PKlIUu3p9hqW 
    = uRHQ0DJ6dtt5mjwFSq > DyJXFxEcUalx * ( JgzhtSk_CeE 
    || FIJCjufVTpI9TVbJg && bi != SgUZPdYwst2DTOvqqeo 
    + ! ! - ! ( iNVM33GtSk5nWNbf1Bk >= - ihhFn36awvZu63vG 
    ( gzvv7qtgZm7j , CDm3y ) ) ) ) - xmK2lj4UlQx * 717718988.2070523268 
    ) / BsJKAGIMVg ] - 922477303 / ! jjku9XqS2Augfy ( 
    ) . emZTVy :) ;
}WmFwVd , M3y7FdSvJzES [ 1440885915 ] 

;
int `;
int e1JU 
;
int ;
int ;
int ;
int ;
int ;
int ';
int %I8rQeqZnCZwctaWdZ8K2 ( int d1 , struct PNGRUV0mJet 
  DD7sCQY6ibdp6AqhoVZ_ ) {
  struct HzbnYGSO2T9QY bNJzFIsWsvqi ;
  int CIIOJzC9pcYYrKMAPDSA ;
{
    if ( rE5AWAvR )     if ( KAOntvy9jveNRh3YiZ ) 
          A ;
else     c4YTjIje \;


    if ( XDI86ZyAAr4mHxQK2IT )     return QN_QaNYNwbDIAj_dy9d 
      ;
else     if ( g3YF )     if ( BxX0 )     while ( BwfoQB2WC9 
      )     Z7TAfp3Ejkz2 ;




  }}
struct _pXCVfQ iOX6uRo9d4B 
;
struct {
};
